<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Scheduler Utec</string>
    <string name="main_menu_login_txt">Login</string>
    <string name="main_menu_register_txt">Register</string>
    <string name="main_menu_explore_txt">Explore</string>
    <string name="main_menu_welcome_txt">Welcome to schedulerUTEC</string>
    <string name="profile_view_schedule_txt">Schedules</string>
    <string name="profile_view_favorites_txt">Favorites</string>
    <string name="generic_schedule_text_view">Schedule: <xliff:g id="title">%s</xliff:g> (#<xliff:g id="id">%s</xliff:g> )</string>
    <string name="profile_view_schedule_text_view_empty">This student currently has no schedules</string>
    <string name="profile_view_favorite_text_view_empty">This student currently has no favorites.</string>
    <string name="profile_view_profile_text_view">Profile of <xliff:g id="first_name">%s</xliff:g> <xliff:g id="last_name">%s</xliff:g></string>
    <string name="profile_view_new_schedule_txt">New Schedule</string>
    <string name="profile_view_owner_options_txt">Owner Options</string>
    <string name="profile_view_create_schedule_txt">Create</string>
    <string name="profile_view_edit_profile_txt">Edit Profile</string>
    <string name="profile_view_delete_account_txt">Delete Account</string>
    <string name="generic_connection_error">There was a problem connecting with the server</string>
    <string name="schedule_view_student_txt">Created by: <xliff:g id="first_name">%s</xliff:g> <xliff:g id="last_name">%s</xliff:g></string>
    <string name="schedule_view_name_txt">Schedule\'s name: <xliff:g id="name">%s</xliff:g></string>
    <string name="main_menu_login_hint_txt">Type in your UTEC ID</string>
    <string name="main_menu_create_account_txt">Create an account</string>
    <string name="main_menu_login_password_txt">Type in your password</string>
    <string name="schedule_explore_title_txt">Explore Schedules</string>
    <string name="schedule_explore_element_name_label_txt">Created by:</string>
    <string name="schedule_explore_element_button_txt">View</string>
    <string name="schedule_view_edit_title_txt">Alter schedule</string>
    <string name="rename_txt">Rename</string>
    <string name="submit_txt">Submit</string>
    <string name="return_schedule_view_txt">Return to normal view</string>
    <string name="main_menu_profile_txt">Profile</string>
    <string name="generic_invalid_credentials">Invalid Credentials</string>
    <string name="generic_successful_login">Successful Login</string>
    <string name="monday_txt">Monday</string>
    <string name="tuesday_txt">Tuesday</string>
    <string name="wednesday_txt">Wednesday</string>
    <string name="thursday_txt">Thursday</string>
    <string name="friday_txt">Friday</string>
    <string name="saturday_txt">Saturday</string>
    <string name="sunday_txt">Sunday</string>
    <string name="classes_txt">Classes</string>
    <string name="time_txt">Time</string>
    <string name="main_menu_logout_txt">Logout</string>
    <string name="generic_successful_logout">Successfully Logged Out</string>
    <string name="generic_invalid_response">Request was rejected. Try again.</string>
    <string name="schedule_edit_title_update_success_txt">Title successfully updated</string>
    <string name="schedule_view_title_txt">View Schedule</string>
    <string name="schedule_view_delete_schedule_txt">Successfully Deleted Schedule</string>
    <string name="schedule_view_add_favorite_txt">Schedule added to favorites</string>
    <string name="schedule_view_delete_favorite_txt">Schedule deleted from favorites</string>
    <string name="schedule_edit_clas_txt"><xliff:g id="section">%s</xliff:g>.<xliff:g id="number">%s</xliff:g> by <xliff:g id="profesor_first_name">%s</xliff:g> <xliff:g id="profesor_last_name">%s</xliff:g></string>
    <string name="generic_add_txt">Add</string>
    <string name="generic_delete_txt">Delete</string>

</resources>