<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileViewActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Profile -->
            <TextView
                android:id="@+id/profile_main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Horarios -->
            <TextView
                android:id="@+id/profile_schedule_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_view_schedule_txt"/>

            <LinearLayout
                android:id="@+id/profile_schedule_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <!-- Favorites -->
            <TextView
                android:id="@+id/profile_favorites_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_view_favorites_txt">
            </TextView>

            <LinearLayout
                android:id="@+id/profile_favorites_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <!-- Extra -->
            <LinearLayout
                android:id="@+id/profile_extra_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_view_owner_options_txt"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/profile_view_new_schedule_txt"/>
                    <EditText
                        android:id="@+id/profile_new_schedule_title"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_view_create_schedule_txt"
                        android:onClick="onClickCreateScheduleButton"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_view_edit_profile_txt"/>
                </RelativeLayout>

                <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                    <Button
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_view_delete_account_txt"/>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>