<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_schd">

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/main_menu_login_txt"
                android:textColor="@color/light_schd"
                android:textSize="70sp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                />
            <!--android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"-->

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/login_id"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:hint="@string/main_menu_login_hint_txt"
                android:background="@color/light_blue"
                android:importantForAutofill="no"
                android:inputType="number"/>
            <!--android:layout_marginStart="50dp" -->

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@color/light_blue"
                android:hint="@string/main_menu_login_password_txt"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
            <!--android:layout_marginStart="50dp" -->

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/main_menu_login_txt"
                style="@style/main_menu_button"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/main_menu_create_account_txt"
                style="@style/main_menu_button"
                />
        </RelativeLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>