<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/schedule_view_edit_title_txt"
                android:textSize="50sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <!-- NAME AND CREATOR -->
            <TextView
                android:id="@+id/schedule_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/schedule_view_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/rename"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/rename_edit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/rename_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rename_txt"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_txt"
                    android:layout_marginLeft="120dp"/>

            </RelativeLayout>




            <!-- TABLE -->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableLayout
                    android:id="@+id/schedule_view_table_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1,2,3,4,5,6,7">
                    <TableRow
                        android:id="@+id/header"
                        android:layout_height="30dp"
                        android:background="@color/blue_schd">
                        <TextView
                            android:text="Hora"
                            style="@style/ScheduleTableCell" />
                        <TextView
                            android:text="Lunes"
                            style="@style/ScheduleTableCell" />
                        <TextView
                            android:text="Martes"
                            style="@style/ScheduleTableCell" />
                        <TextView
                            android:text="Miercoles"
                            style="@style/ScheduleTableCell" />
                        <TextView
                            android:text="Jueves"
                            style="@style/ScheduleTableCell" />
                        <TextView
                            android:text="Viernes"
                            style="@style/ScheduleTableCell" />
                        <TextView
                            android:text="Sabado"
                            style="@style/ScheduleTableCell" />
                        <TextView
                            android:text="Domingo"
                            style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="7:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="8:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="9:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="10:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="11:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="12:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="13:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="14:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="15:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="16:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="17:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="18:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="19:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="20:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                    <TableRow
                        android:layout_height="20dp"
                        android:background="@color/dark_schd">
                        <TextView
                            android:text="21:00"
                            style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                        <TextView style="@style/ScheduleTableCell" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_schedule_view_txt"
                android:onClick="onClickSchedule"/>
            <!-- STATUS -->
            <TextView
                android:id="@+id/schedule_view_status"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <!-- EDIT OPTIONS -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cursos"/>

            <LinearLayout
                android:id="@+id/schedule_edit_courses_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>